--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,13 @@
     <fragment
         android:id="@+id/articleFragment"
         android:name="com.example.newsapp.screens.ArticleFragment"
-        android:label="ArticleFragment" />
+        android:label="ArticleFragment" >
+        <argument
+            android:name="article"
+            app:argType="com.example.newsapp.models.Article"/>
+
+
+    </fragment>
 
 
 </navigation>
