--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -4,23 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/poppins"
-        android:text="@string/favourites"
-        android:textColor="@color/purple"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        tools:ignore="TextContrastCheck" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerFavourites"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="60dp" />
+        android:layout_marginEnd="8dp"
+        />
 
 </FrameLayout>
