--- a/app/src/main/res/layout/fragment_headlines.xml
+++ b/app/src/main/res/layout/fragment_headlines.xml
@@ -13,121 +13,12 @@
         android:layout_marginTop="12dp"
         android:fontFamily="@font/poppins"
         android:text="@string/headlines"
-        android:textColor="@color/purple"
+        android:textColor="@color/yellow"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TextContrastCheck" />
-
-    <HorizontalScrollView
-        android:id="@+id/horizontalScroll"
-        style="?android:attr/buttonBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:scrollbars="none"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/headlinesTextView">
-
-        <LinearLayout
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp"
-            tools:ignore="VisualLintBounds">
-
-            <Button
-                android:id="@+id/business"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/business"
-                android:textColor="@color/white"
-                tools:ignore="TouchTargetSizeCheck" />
-
-
-            <Button
-                android:id="@+id/entertainment"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:padding="5dp"
-                android:text="@string/entertainment"
-                android:textColor="@color/white"
-                tools:ignore="TouchTargetSizeCheck" />
-
-
-            <Button
-                android:id="@+id/general"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/general"
-                android:textColor="@color/white"
-                tools:ignore="TouchTargetSizeCheck" />
-
-
-            <Button
-                android:id="@+id/health"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/health"
-                android:textColor="@color/white" />
-
-
-            <Button
-                android:id="@+id/science"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/science"
-                android:textColor="@color/white" />
-
-
-            <Button
-                android:id="@+id/sports"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/sports"
-                android:textColor="@color/white" />
-
-
-            <Button
-                android:id="@+id/technology"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/technology"
-                android:textColor="@color/white" />
-
-        </LinearLayout>
-    </HorizontalScrollView>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerHeadlines"
@@ -140,7 +31,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScroll" />
+        app:layout_constraintTop_toBottomOf="@+id/headlinesTextView" />
 
     <include
         android:id="@+id/itemHeadlinesError"
