--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -22,7 +22,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/poppins"
         android:text="SOURCE"
-        android:textColor="@color/purple"
+        android:textColor="@color/yellow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/articleImage" />
 
