--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/headlinesFragment"
         android:name="com.example.newsapp.screens.HeadlinesFragment"
-        android:label="HeadlinesFragment" >
+        android:label="QuickRead" >
 
         <action
             android:id="@+id/action_headlinesFragment_to_articleFragment"
@@ -16,7 +16,7 @@
     <fragment
         android:id="@+id/favouritesFragment"
         android:name="com.example.newsapp.screens.FavouritesFragment"
-        android:label="FavouritesFragment" >
+        android:label="Favourites" >
         <action
             android:id="@+id/action_favouritesFragment_to_articleFragment"
             app:destination="@id/articleFragment" />
@@ -24,7 +24,7 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.example.newsapp.screens.SearchFragment"
-        android:label="SearchFragment" >
+        android:label="Search" >
         <action
             android:id="@+id/action_searchFragment_to_articleFragment"
             app:destination="@id/articleFragment" />
@@ -32,13 +32,21 @@
     <fragment
         android:id="@+id/articleFragment"
         android:name="com.example.newsapp.screens.ArticleFragment"
-        android:label="ArticleFragment" >
+        android:label="Article" >
         <argument
             android:name="article"
             app:argType="com.example.newsapp.models.Article"
             app:nullable="true" />
 
 
+    </fragment>
+    <fragment
+        android:id="@+id/categoryFragment"
+        android:name="com.example.newsapp.screens.CategoryFragment"
+        android:label="Categories" >
+        <action
+            android:id="@+id/action_categoryFragment_to_articleFragment"
+            app:destination="@id/articleFragment" />
     </fragment>
 
 
