--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="purple">#03A9F4</color>
     <color name="yellow">#FFC000</color>
 
+    <color name="colorPrimary">#0081C9</color>
+    <color name="colorPrimaryDark">#0081C9</color>
+    <color name="colorAccent">#86E5FF</color>
+
 </resources>
