--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -26,79 +26,67 @@
 
             <Button
                 android:id="@+id/business"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
+                android:background="?attr/selectableItemBackground"
+                android:textColor="?android:attr/textColorPrimary"
                 android:text="@string/business"
-                android:textColor="@color/white"
                 tools:ignore="TouchTargetSizeCheck" />
-
 
             <Button
                 android:id="@+id/entertainment"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
-                android:padding="5dp"
+                android:background="?attr/selectableItemBackground"
+                android:textColor="?android:attr/textColorPrimary"
                 android:text="@string/entertainment"
-                android:textColor="@color/white"
                 tools:ignore="TouchTargetSizeCheck" />
-
 
             <Button
                 android:id="@+id/health"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/health"
-                android:textColor="@color/white" />
-
+                android:background="?attr/selectableItemBackground"
+                android:textColor="?android:attr/textColorPrimary"
+                android:text="@string/health" />
 
             <Button
                 android:id="@+id/science"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/science"
-                android:textColor="@color/white" />
-
+                android:background="?attr/selectableItemBackground"
+                android:textColor="?android:attr/textColorPrimary"
+                android:text="@string/science" />
 
             <Button
                 android:id="@+id/sports"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/sports"
-                android:textColor="@color/white" />
-
+                android:background="?attr/selectableItemBackground"
+                android:textColor="?android:attr/textColorPrimary"
+                android:text="@string/sports" />
 
             <Button
                 android:id="@+id/technology"
-                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
-                android:background="@drawable/filter_btn_bg"
-                android:text="@string/technology"
-                android:textColor="@color/white" />
+                android:background="?attr/selectableItemBackground"
+                android:textColor="?android:attr/textColorPrimary"
+                android:text="@string/technology" />
 
         </LinearLayout>
     </HorizontalScrollView>
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerHeadlines"
